[package]
name = "controller"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "abort"
strip = "symbols"
lto = true

[dependencies]
nom = "8.0.0"
serde_json = "1.0.140"
serde_repr = "0.1.20"

[dependencies.axum]
version = "0.8.1"
features = ["macros", "ws"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.tokio]
version = "1.44.1"
features = ["fs", "macros", "rt-multi-thread"]

[dependencies.twitch-irc]
version = "5.0.1"
default-features = false
features = ["transport-tcp", "transport-tcp-rustls-native-roots"]
